[package]
name = "mcartist"
version = "2.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
json = "0.12.4"
num-integer = "0.1.44"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
itertools = "0.10.0"

[build-dependencies]
bakery = { path = "./src/bakery" }

